@@ -1,3 +1,10 @@
+2002-08-09  Jody Goldberg <jody@gnome.org>
+
+	* pln.c (pln_file_open) : fix signature and queue a respan.
+	(pln_parse_sheet) : YAY! we have specs.  Do a few minor tweaks.
+
+	* plugin.xml.in : update a bit.
+
 2002-07-22  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* plugin.xml.in: Set loader type to "Gnumeric_Builtin:module".
